<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/y_surname"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/marks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/marks"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/rowId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/row_id"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:inputType="text"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addBtn"
        android:text="@string/add_data"
        android:layout_margin="4dp"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewBtn"
        android:text="@string/view_data"
        android:layout_margin="4dp"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/update"
        android:text="@string/updatebtn"
        android:layout_margin="4dp"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete"
        android:text="@string/delete"
        android:layout_margin="4dp"

        />


</LinearLayout>